# asteroid-second-display

./: CMakeLists.txt  README.md
dbus/: CMakeLists.txt  dbus.h  display.h  generate_xml.sh  hands.h  org.aos.display.xml  org.aos.hands.xml  org.asteroid.SecondDisplay.conf
declarative/: CMakeLists.txt  Hands  SecondDisplay  hands.cpp  hands.h  qmldir  seconddisplay.cpp  seconddisplay.h  seconddisplay_plugin.cpp  seconddisplay_plugin.h
examples/qml/: example.qml  stepcounter.qml
src/: CMakeLists.txt  backend.cpp  backend.h  backend_catfish.cpp  backend_catfish.h  main.cpp
systemd/: CMakeLists.txt  asteroid-seconddisplay-sync.service  asteroid-seconddisplay-sync.timer  asteroid-seconddisplayd.service
tools/: CMakeLists.txt  main.cpp
